--- a/about.html
+++ b/about.html
@@ -175,7 +175,7 @@
                         </ul>
                     </div>
                     <div class="col-12 mt-3">
-                        <a class="button" href="/cv/shabeeb resume.pdf" download="">
+                        <a class="button" href="cv/shabeeb resume.pdf" download="">
                           <span class="button-text">Download CV </span>  <span class="button-icon fa fa-download"></span>
                         </a>
                     </div>
