--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Index</title>
+    <title>Shabeeb | Index</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Template Google Fonts -->
@@ -87,7 +87,7 @@
     <ul class="icon-menu d-none d-lg-block revealator-slideup revealator-once revealator-delay1">
         <li class="icon-box active">
             <i class="fa fa-home"></i>
-            <a href="index-2.html">
+            <a href="index.html">
                 <h2>Home</h2>
             </a>
         </li>
@@ -125,7 +125,7 @@
             <span></span>
             <span></span>
             <ul class="list-unstyled" id="menu">
-                <li class="active"><a href="index-2.html"><i class="fa fa-home"></i><span>Home</span></a></li>
+                <li class="active"><a href="index.html"><i class="fa fa-home"></i><span>Home</span></a></li>
                 <li><a href="about.html"><i class="fa fa-user"></i><span>About</span></a></li>
                 <li><a href="portfolio.html"><i class="fa fa-folder-open"></i><span>Portfolio</span></a></li>
                 <li><a href="contact.html"><i class="fa fa-envelope-open"></i><span>Contact</span></a></li>
@@ -145,7 +145,7 @@
             <div>
                 <img src="img/shabeeb1.jpg" class="img-fluid main-img-mobile d-none d-sm-block d-lg-none" alt="my picture" />
                 <h1 class="text-uppercase poppins-font">I'm shabeeb.<span>web DEVELOPER</span></h1>
-                <p class="open-sans-font">I'm a Tunisian based web designer & back‑end developer focused on crafting clean & user‑friendly experiences, I am passionate about building excellent software that improves the lives of those around me.</p>
+                <p class="open-sans-font">I'm Shabeeb Python Django web developer, specializing in building dynamic and scalable web applications using the Django framework. With i am expertise in Python programming language and Django's Model-View-Template architecture, i  can create robust and user-friendly web solutions. my skills include developing web sites and deploying applications on cloud platforms. i am experience working with databases such as Dbsqlite, and integrating various libraries and frameworks to enhance web development. I am stays up-to-date with the latest web development trends and tools to provide cutting-edge solutions.</p>
                 <a class="button" href="about.html">
                     <span class="button-text">more about me</span>
                     <span class="button-icon fa fa-arrow-right"></span>
