--- a/about.html
+++ b/about.html
@@ -88,7 +88,7 @@
     <ul class="icon-menu d-none d-lg-block revealator-slideup revealator-once revealator-delay1">
         <li class="icon-box">
             <i class="fa fa-home"></i>
-            <a href="index-2.html">
+            <a href="index.html">
                 <h2>Home</h2>
             </a>
         </li>
@@ -126,7 +126,7 @@
             <span></span>
             <span></span>
             <ul class="list-unstyled" id="menu">
-                <li><a href="index-2.html"><i class="fa fa-home"></i><span>Home</span></a></li>
+                <li ><a href="index.html"><i class="fa fa-home"></i><span>Home</span></a></li>
                 <li class="active"><a href="about.html"><i class="fa fa-user"></i><span>About</span></a></li>
                 <li><a href="portfolio.html"><i class="fa fa-folder-open"></i><span>Portfolio</span></a></li>
                 <li><a href="contact.html"><i class="fa fa-envelope-open"></i><span>Contact</span></a></li>
@@ -170,7 +170,7 @@
                             <li> <span class="title">Address :</span> <span class="value d-block d-sm-inline-block d-lg-block d-xl-inline-block">Malappuram,Kerala,India</span> </li>
                             <li> <span class="title">phone :</span><a href="tel:7593973478" style="text-decoration: none; color:white;"><span class="value d-block d-sm-inline-block d-lg-block d-xl-inline-block">+91 7593973478</span></a> </li>
                             <li> <span class="title">Email :</span> <a href="mailto:shabeebsha942@gmail.com" style="text-decoration: none; color:white;"><span class="value d-block d-sm-inline-block d-lg-block d-xl-inline-block">shabeebsha942@gmail.com</span></a> </li>
-                            <li> <span class="title">Linked in :</span> <span class="value d-block d-sm-inline-block d-lg-block d-xl-inline-block">shabeebsha</span> </li>
+                            <li> <span class="title">Linked in :</span> <span class="value d-block d-sm-inline-block d-lg-block d-xl-inline-block"><a href="https://www.linkedin.com/in/shabeeb-sha-645212245/" style="text-decoration: none; color:white;">shabeeb sha</a></span> </li>
                             <li> <span class="title">langages :</span> <span class="value d-block d-sm-inline-block d-lg-block d-xl-inline-block">English</span> </li>
                         </ul>
                     </div>
@@ -240,8 +240,8 @@
                 <h6 class="text-uppercase open-sans-font text-center mt-2 mt-sm-4">django</h6>
             </div>
             <div class="col-6 col-md-3 mb-3 mb-sm-5">
-                <div class="c100 p70">
-                    <span>80%</span>
+                <div class="c100 p90">
+                    <span>90%</span>
                     <div class="slice">
                         <div class="bar"></div>
                         <div class="fill"></div>
@@ -250,8 +250,8 @@
                 <h6 class="text-uppercase open-sans-font text-center mt-2 mt-sm-4">Html</h6>
             </div>
             <div class="col-6 col-md-3 mb-3 mb-sm-5">
-                <div class="c100 p75">
-                    <span>75%</span>
+                <div class="c100 p85">
+                    <span>85%</span>
                     <div class="slice">
                         <div class="bar"></div>
                         <div class="fill"></div>
@@ -260,8 +260,8 @@
                 <h6 class="text-uppercase open-sans-font text-center mt-2 mt-sm-4">css</h6>
             </div>
             <div class="col-6 col-md-3 mb-3 mb-sm-5">
-                <div class="c100 p70">
-                    <span>70%</span>
+                <div class="c100 p80">
+                    <span>80%</span>
                     <div class="slice">
                         <div class="bar"></div>
                         <div class="fill"></div>
@@ -270,8 +270,8 @@
                 <h6 class="text-uppercase open-sans-font text-center mt-2 mt-sm-4">javascript</h6>
             </div>
             <div class="col-6 col-md-3 mb-3 mb-sm-5">
-                <div class="c100 p75">
-                    <span>75%</span>
+                <div class="c100 p85">
+                    <span>85%</span>
                     <div class="slice">
                         <div class="bar"></div>
                         <div class="fill"></div>
@@ -305,7 +305,7 @@
         <!-- Experience & Education Starts -->
         <div class="row">
             <div class="col-12">
-                <h3 class="text-uppercase pb-5 mb-0 text-left text-sm-center custom-title ft-wt-600">Experience <span>&</span> Education</h3>
+                <h3 class="text-uppercase pb-5 mb-0 text-left text-sm-center custom-title ft-wt-600">Experience</h3>
             </div>
             <div class="col-lg-6 m-15px-tb">
                 <div class="resume-box">
