--- a/portfolio.html
+++ b/portfolio.html
@@ -88,7 +88,7 @@
     <ul class="icon-menu d-none d-lg-block revealator-slideup revealator-once revealator-delay1">
         <li class="icon-box">
             <i class="fa fa-home"></i>
-            <a href="index-2.html">
+            <a href="index.html">
                 <h2>Home</h2>
             </a>
         </li>
@@ -126,7 +126,7 @@
             <span></span>
             <span></span>
             <ul class="list-unstyled" id="menu">
-                <li><a href="index-2.html"><i class="fa fa-home"></i><span>Home</span></a></li>
+                <li><a href="index.html"><i class="fa fa-home"></i><span>Home</span></a></li>
                 <li><a href="about.html"><i class="fa fa-user"></i><span>About</span></a></li>
                 <li class="active"><a href="portfolio.html"><i class="fa fa-folder-open"></i><span>Portfolio</span></a></li>
                 <li><a href="contact.html"><i class="fa fa-envelope-open"></i><span>Contact</span></a></li>
@@ -153,7 +153,7 @@
                 <li>
                     <figure>
                         <img src="img/projects/project-1.jpg" alt="Portolio Image" />
-                        <div><span>Image Project</span></div>        <a href="https://themeforest.net/item/tunis-personal-portfolio/26761598?irgwc=1&amp;clickid=UBs0rDX6YxyJWfewUx0Mo3E1UkiwozXD10XATw0&amp;iradid=275988&amp;irpid=1327395&amp;iradtype=ONLINE_TRACKING_LINK&amp;irmptype=mediapartner&amp;mp_value1=&amp;utm_campaign=af_impact_radius_1327395&amp;utm_medium=affiliate&amp;utm_source=impact_radius" class="waves-effect waves-light font-weight-700 purchase"><i class="fa fa-shopping-cart"></i> Purchase</a>
+                        <div><span>Image Project</span></div>
                     </figure>
                 </li>
                 <!-- Portfolio Item Ends -->
