--- a/contact.html
+++ b/contact.html
@@ -88,7 +88,7 @@
     <ul class="icon-menu d-none d-lg-block revealator-slideup revealator-once revealator-delay1">
         <li class="icon-box">
             <i class="fa fa-home"></i>
-            <a href="index-2.html">
+            <a href="index.html">
                 <h2>Home</h2>
             </a>
         </li>
