--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Portfolio - Tunis Personal Portfolio</title>
+    <title>Portfolio | shabeeb</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Template Google Fonts -->
