--- a/contact.html
+++ b/contact.html
@@ -126,7 +126,7 @@
             <span></span>
             <span></span>
             <ul class="list-unstyled" id="menu">
-                <li><a href="index-2.html"><i class="fa fa-home"></i><span>Home</span></a></li>
+                <li><a href="index.html"><i class="fa fa-home"></i><span>Home</span></a></li>
                 <li><a href="about.html"><i class="fa fa-user"></i><span>About</span></a></li>
                 <li><a href="portfolio.html"><i class="fa fa-folder-open"></i><span>Portfolio</span></a></li>
                 <li class="active"><a href="contact.html"><i class="fa fa-envelope-open"></i><span>Contact</span></a></li>
@@ -159,15 +159,20 @@
                     <i class="fa fa-phone-square position-absolute"></i>
                     <span class="d-block">call me</span><a href="tel:7593973478" style="text-decoration: none; color:white;">+91 7593973478 </a>
                 </p>
+                <p class="open-sans-font custom-span-contact position-relative">
+                    <i class="fa fa-whatsapp position-absolute"></i>
+                    <span class="d-block">Contact on whatsapp</span><a href="https://wa.link/itbb46" style="text-decoration: none; color:white;">+91 7593973478 </a>
+                </p>
                 <ul class="social list-unstyled pt-1 mb-5">
-                    <li class="facebook"><a title="Facebook" href="#"><i class="fa fa-facebook"></i></a>
+                    <li class="facebook"><a title="linkedin" href="https://www.linkedin.com/in/shabeeb-sha-645212245/"><i class="fa fa-linkedin"></i></a>
                     </li>
-                    <li class="twitter"><a title="Twitter" href="#"><i class="fa fa-twitter"></i></a>
+                    <!-- <li class="twitter"><a title="Twitter" href="#"><i class="fa fa-twitter"></i></a>
+                    </li> -->
+                    <li class="dribbble"><a title="Github" href="https://github.com/shabeeb942"><i class="fa fa-github"></i></a>
                     </li>
-                    <li class="youtube"><a title="Youtube" href="#"><i class="fa fa-youtube"></i></a>
+                    <li class="youtube"><a title="Youtube" href="https://www.instagram.com/shabeeb_sha942/"><i class="fa fa-instagram"></i></a>
                     </li>
-                    <li class="dribbble"><a title="Dribbble" href="#"><i class="fa fa-dribbble"></i></a>
-                    </li>
+                    
                 </ul>
             </div>
             <!-- Left Side Ends -->
