--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8">
     <title>Shabeeb | Index</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+<!-- bootom-whatsapp -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <!-- Template Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,600i,700" rel="stylesheet">
@@ -155,7 +156,9 @@
     </div>
 </section>
 <!-- Main Content Ends -->
-
+<a href="https://wa.link/itbb46" class="float" target="_blank">
+    <i class="fa fa-whatsapp my-float"></i>
+    </a>
 <!-- Template JS Files -->
 <script src="js/jquery-3.5.0.min.js"></script>
 <script src="js/styleswitcher.js"></script>
