--- a/about.html
+++ b/about.html
@@ -190,8 +190,8 @@
                 <div class="row">
                     <div class="col-6">
                         <div class="box-stats with-margin">
-                            <h3 class="poppins-font position-relative">6</h3>
-                            <p class="open-sans-font m-0 position-relative text-uppercase">Months of <span class="d-block">experience</span></p>
+                            <h3 class="poppins-font position-relative">1</h3>
+                            <p class="open-sans-font m-0 position-relative text-uppercase">year of <span class="d-block">experience</span></p>
                         </div>
                     </div>
                     <div class="col-6">
